--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-input {
+  @apply w-full bg-slate-800 font-bold rounded-sm p-3 border-solid border border-[#252945] focus:outline-none focus:ring-2 focus:ring-blue-900 focus:border-transparent text-base;
+}
+
+.btn {
+  @apply px-8 py-3 rounded-md bg-white text-black font-medium text-lg;
+}
+
+.btn-blue {
+  @apply px-8 py-3 rounded-md font-medium text-lg bg-blue-900 text-white;
+}
