--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,24 @@
 .btn-blue {
   @apply px-8 py-3 rounded-md font-medium text-lg bg-blue-900 text-white;
 }
+
+/* Bug status dropdown background colors, cannot be applied dynamically */
+.bg-unassigned {
+  @apply bg-slate-900;
+}
+
+.bg-inprogress {
+  @apply bg-sky-600;
+}
+
+.bg-testing {
+  @apply bg-teal-600;
+}
+
+.bg-todo {
+  @apply bg-violet-800;
+}
+
+.bg-closed {
+  @apply bg-white text-gray-800;
+}
